# computer-graphics-c-plus-plus

./: .gitignore  README.md
Alien Invasion - mjk141/: AlienInvasion.cpp  CMakeLists.txt
Alien Invasion - mjk141/textures/castle/: wall.tga
Alien Invasion/textures/outside/: snow.tga
Assignment/: AlienInvasion.cpp  CMakeLists.txt  README.txt
Assignment 2/: CMakeLists.txt  README.md  RayTracer.cpp
Assignment 2/rays/: Ray.h
Assignment 2/scene-objects/: Cylinder.cpp  Cylinder.h  Plane.cpp  SceneObject.cpp  SceneObject.h
Assignment/textures/: castle-floor.tga  castle-wall.tga  floor.tga
Assignment/textures/outside/: grass.tga
Lab1/: Model3D.cpp  Teapot.cpp
Lab10/: CMakeLists.txt
Lab10/CubeDraw/: CubeDraw.cpp
Lab10/CylinderDraw/: Cylinder.frag
Lab2/: Cannon.cpp  Humanoid.cpp
Lab3/: Shadow.cpp  Train.cpp
Lab4/Earth/: Earth.cpp
Lab4/RailWagon/: RailWagon.cpp
Lab4/SkyBox/: Skybox.cpp
Lab4/Yard/: Yard.cpp
Lab5/Tower/: Tower.cpp
Lab5/Vase/: Vase.cpp
Lab7/: CMakeLists.txt
Lab7/ray-tracing-files/: RayTracer.cpp
Lab8/: CMakeLists.txt
Lab8/lab7-files/: RayTracer.cpp
Lab8/lab8-files/: Plane.h
Lab9/: CMakeLists.txt
Lab9/TorusDraw/: Torus.frag  Torus.vert  TorusDraw.cpp
Ray Tracing/rays/: Ray.cpp
Ray Tracing/scene-objects/: SceneObject.cpp  SceneObject.h
Teaching Labs/Lab1/: Model3D.cpp  Teapot.cpp
Teaching Labs/Lab10/CubeDraw/: Cube.frag
Teaching Labs/Lab10/CylinderDraw/: CylinderDraw.cpp
Teaching Labs/Lab2/: Cannon.cpp  Humanoid.cpp
Teaching Labs/Lab3/: CMakeLists.txt  Shadow.cpp  Train.cpp
Teaching Labs/Lab4/: CMakeLists.txt
Teaching Labs/Lab4/Earth/: Earth.cpp
Teaching Labs/Lab4/RailWagon/: RailWagon.cpp
Teaching Labs/Lab4/SkyBox/: Skybox.cpp
Teaching Labs/Lab4/Yard/: Yard.cpp
Teaching Labs/Lab5/: CMakeLists.txt
Teaching Labs/Lab5/Tower/: Tower.cpp
Teaching Labs/Lab5/Vase/: Vase.cpp
Teaching Labs/Lab7/ray-tracing-files/: RayTracer.cpp
Teaching Labs/Lab8/lab7-files/: RayTracer.cpp
Teaching Labs/Lab8/lab8-files/: Plane.h
Teaching Labs/Lab9/TorusDraw/: Torus.frag
